# ani-ss

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle.js  index.html  index.js  init.js  js_init_js.bundle.js  package.json  vendors-node_modules_text-encoding_index_js.bundle.js  webpack.config.js  www_js_init_js.bundle.js
.github/workflows/: pages.yml
js/: example_modified.glsl  init.js  shader_modifications.diff
src/: ani_ss.rs  aniss.rs  draw_frag.glsl  draw_vertex.glsl  lib.rs  renderer.rs  shaders.rs  utils.rs
src/shader_loader/: build_program.rs  fragment_template.glsl  mod.rs  program.rs  program_wrapper.rs  read_shaders.rs  vertex_template.glsl
src/shaders/: draw_frag.glsl  draw_vertex.glsl  fragment_template.glsl  vertex_template.glsl
www/: index.html  index.js
www/js/: init.js
