[package]
name = "ani-ss"
version = "0.1.0"
authors = ["Nick <cupofpho@gmail.com>"]
edition = "2018"
description = "super sampling for the web"
repository = "https://github.com/pinnouse/ani-ss"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "console",
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlVideoElement',
    'Window',
    'WebGlActiveInfo',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlRenderbuffer',
    'WebGlRenderingContext'
]
