[package]
name = "ani-ss"
version = "0.1.0"
authors = ["Nick <cupofpho@gmail.com>"]
edition = "2018"
description = "super sampling for the web"
repository = "https://github.com/pinnouse/ani-ss"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.14"
console_log = { version = "0.2.0", features = ["color"] }
itertools = "0.10.0"
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "console",
    'Element',
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'HtmlVideoElement',
    'Window',
    'WebGlActiveInfo',
    'WebGlBuffer',
    'WebGlFramebuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlRenderbuffer',
    'WebGl2RenderingContext'
]
